--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -106,7 +106,7 @@
                  <td width="10%" align="right"> <%= contrato2.fecha_pago.strftime("%d/%m/%Y") %> </td>
             <% end %>
 
-            <% if contrato2.sit == "1" %>
+            <% if contrato2.estado == "1" %>
 
             <td width="4%" align="right"> "C" </td>
             <% else %>
@@ -118,13 +118,13 @@
 
             <%  nroitem = nroitem + 1 %>
 
-             <%if contrato2.sit == "1" %>
+             <%if contrato2.estado == "1" %>
 
                <% tot_canc1 += contrato2.vventa %>
                <% tot_canc2 += contrato2.importe  %>
             <% end %>    
 
-             <% if contrato2.factura1 != nil  and  contrato2.sit != "1" %>
+             <% if contrato2.factura1 != nil  and  contrato2.estado != "1" %>
                <% tot_cob1 += contrato2.vventa %>
                <% tot_cob2 += contrato2.importe  %> 
 
